syntax = "proto3";

package proto;

option go_package = "state";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// SignRate is used to keep the number of success and failed signings
message SignRate {
    uint32 NumSuccess = 1;
    uint32 NumFailure = 2;
}

// ValidatorApiResponse represents the data which is fetched from each validator for returning it in API call
message ValidatorApiResponse {
    float TempRating = 1 [(gogoproto.jsontag) = "tempRating"];
    uint32 NumLeaderSuccess = 2 [(gogoproto.jsontag) = "numLeaderSuccess"];
    uint32 NumLeaderFailure = 3 [(gogoproto.jsontag) = "numLeaderFailure"];
    uint32 NumValidatorSuccess = 4 [(gogoproto.jsontag) = "numValidatorSuccess"];
    uint32 NumValidatorFailure = 5 [(gogoproto.jsontag) = "numValidatorFailure"];
    uint32 NumValidatorIgnoredSignatures = 6 [(gogoproto.jsontag) = "numValidatorIgnoredSignatures"];
    float Rating = 7 [(gogoproto.jsontag) = "rating"];
    float RatingModifier = 8 [(gogoproto.jsontag) = "ratingModifier"];
    uint32 TotalNumLeaderSuccess = 9 [(gogoproto.jsontag) = "totalNumLeaderSuccess"];
    uint32 TotalNumLeaderFailure = 10 [(gogoproto.jsontag) = "totalNumLeaderFailure"];
    uint32 TotalNumValidatorSuccess = 11 [(gogoproto.jsontag) = "totalNumValidatorSuccess"];
    uint32 TotalNumValidatorFailure = 12 [(gogoproto.jsontag) = "totalNumValidatorFailure"];
    uint32 TotalNumValidatorIgnoredSignatures = 13 [(gogoproto.jsontag) = "totalNumValidatorIgnoredSignatures"];
    uint32 ShardId = 14 [(gogoproto.jsontag) = "shardId"];
    string ValidatorStatus = 15 [(gogoproto.jsontag) = "validatorStatus"];
}

// PeerAccountData represents the data that defines the PeerAccount
message PeerAccountData {
    bytes BLSPublicKey = 1;
    bytes RewardAddress = 2;
    uint32 ShardId = 3;
    SignRate ValidatorSuccessRate = 4 [(gogoproto.nullable) = false];
    SignRate LeaderSuccessRate = 5 [(gogoproto.nullable) = false];
    uint32 ValidatorIgnoredSignaturesRate = 6;
    uint32 Rating = 7;
    uint32 TempRating = 8;
    bytes AccumulatedFees = 9 [(gogoproto.casttypewith) = "math/big.Int;github.com/ElrondNetwork/elrond-go/data.BigIntCaster"];
    uint32 NumSelectedInSuccessBlocks = 10;
	uint32 IndexInList = 11;
	string List        = 12;
    uint32 ConsecutiveProposerMisses = 13;
    SignRate TotalValidatorSuccessRate = 14 [(gogoproto.nullable) = false];
    SignRate TotalLeaderSuccessRate = 15 [(gogoproto.nullable) = false];
    uint32 TotalValidatorIgnoredSignaturesRate = 16;
    uint64 Nonce = 17;
    uint32 UnStakedEpoch = 18;
}
